Hopefully finally fixed dark mode dark text issues

--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -43,6 +43,7 @@ button {
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
+  color: white;
   cursor: pointer;
   transition: border-color 0.2s;
 }
@@ -60,6 +61,7 @@ button:hover {
   }
   button {
     background-color: #f9f9f9;
+    color: black;
   }
 }
 
